fix font size of title on mobile

--- a/css/savvasxyz.css
+++ b/css/savvasxyz.css
@@ -97,7 +97,7 @@ border-bottom: 1.5px solid ;
 
 section#head-section h1 {     
     font-family: 'nova mono';
-    font-size: 4rem;    
+    font-size: 10vh;    
     font-weight: bold;    
     color:whitesmoke;
 }
